--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Calculator</title>
-  <script src="./js/script.js"></script>
+  <script src="./js/script.js" defer></script>
   <style>
     html {
       box-sizing: border-box;
@@ -28,7 +28,7 @@
     .display {
       width: 300px;
       text-align: right;
-      font-size: 40px;
+      font-size: 60px;
     }
 
     .buttons {
@@ -58,20 +58,20 @@
       <button class="btn"></button>
       <button class="btn"></button>
       <button class="btn">/</button>
-      <button class="btn">7</button>
-      <button class="btn">8</button>
-      <button class="btn">9</button>
+      <button class="btn num">7</button>
+      <button class="btn num">8</button>
+      <button class="btn num">9</button>
       <button class="btn">*</button>
-      <button class="btn">4</button>
-      <button class="btn">5</button>
-      <button class="btn">6</button>
+      <button class="btn num">4</button>
+      <button class="btn num">5</button>
+      <button class="btn num">6</button>
       <button class="btn">-</button>
-      <button class="btn">3</button>
-      <button class="btn">2</button>
-      <button class="btn">1</button>
+      <button class="btn num">3</button>
+      <button class="btn num">2</button>
+      <button class="btn num">1</button>
       <button class="btn">+</button>
       <button class="btn"></button>
-      <button class="btn">0</button>
+      <button class="btn num">0</button>
       <button class="btn"></button>
       <button class="btn">=</button>
     </div>
