--- a/index.html
+++ b/index.html
@@ -26,9 +26,11 @@
     }
 
     .display {
+      border: 1px solid saddlebrown;
       width: 300px;
+      height: 60px;
       text-align: right;
-      font-size: 60px;
+      font-size: 50px;
     }
 
     .buttons {
@@ -54,7 +56,7 @@
       0123456789
     </div>
     <div class="buttons">
-      <button class="btn">C</button>
+      <button class="btn cls">C</button>
       <button class="btn"></button>
       <button class="btn"></button>
       <button class="btn">/</button>
