Populate the display when operators are clicked

--- a/index.html
+++ b/index.html
@@ -59,19 +59,19 @@
       <button class="btn cls">C</button>
       <button class="btn"></button>
       <button class="btn"></button>
-      <button class="btn">/</button>
+      <button class="btn oper">/</button>
       <button class="btn num">7</button>
       <button class="btn num">8</button>
       <button class="btn num">9</button>
-      <button class="btn">*</button>
+      <button class="btn oper">*</button>
       <button class="btn num">4</button>
       <button class="btn num">5</button>
       <button class="btn num">6</button>
-      <button class="btn">-</button>
+      <button class="btn oper">-</button>
       <button class="btn num">3</button>
       <button class="btn num">2</button>
       <button class="btn num">1</button>
-      <button class="btn">+</button>
+      <button class="btn oper">+</button>
       <button class="btn"></button>
       <button class="btn num">0</button>
       <button class="btn"></button>
