Rework main display into a minor and major display
Major display is mainly for results of the calculations whereas the
minor display is extensively used for showing stuff to the user.

--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
       margin: 0 auto;
     }
 
-    .display {
+    .minor-display,
+    .major-display {
       border: 1px solid saddlebrown;
       width: 300px;
       height: 60px;
@@ -52,9 +53,8 @@
     <div class="heading">
       <h1>Calculator</h1>
     </div>
-    <div class="display">
-      0123456789
-    </div>
+    <div class="minor-display"></div>
+    <div class="major-display">0</div>
     <div class="buttons">
       <button class="btn cls">C</button>
       <button class="btn"></button>
