Handle floating-point numbers and undoing inputs

--- a/index.html
+++ b/index.html
@@ -57,25 +57,25 @@
     <div class="major-display">0</div>
     <div class="buttons">
       <button class="btn ac">AC</button>
+      <button class="btn del">DEL</button>
       <button class="btn"></button>
       <button class="btn"></button>
-      <button class="btn oper">/</button>
       <button class="btn num">7</button>
       <button class="btn num">8</button>
       <button class="btn num">9</button>
-      <button class="btn oper">*</button>
+      <button class="btn oper">/</button>
       <button class="btn num">4</button>
       <button class="btn num">5</button>
       <button class="btn num">6</button>
-      <button class="btn oper">-</button>
-      <button class="btn num">3</button>
-      <button class="btn num">2</button>
+      <button class="btn oper">*</button>
       <button class="btn num">1</button>
-      <button class="btn oper">+</button>
-      <button class="btn"></button>
+      <button class="btn num">2</button>
+      <button class="btn num">3</button>
+      <button class="btn oper">-</button>
+      <button class="btn dec">.</button>
       <button class="btn num">0</button>
-      <button class="btn"></button>
       <button class="btn eq">=</button>
+      <button class="btn oper">+</button>
     </div>
   </div>
 </body>
