--- a/index.html
+++ b/index.html
@@ -34,6 +34,13 @@
       font-size: 50px;
     }
 
+    .minor-display {
+      display: flex;
+      justify-content: flex-end;
+      white-space: nowrap;
+      overflow: hidden;
+    }
+
     .buttons {
       display: flex;
       flex-wrap: wrap;
