--- a/index.html
+++ b/index.html
@@ -4,56 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Calculator</title>
+  <link rel="stylesheet" href="./css/styles.css">
   <script src="./js/script.js" defer></script>
-  <style>
-    html {
-      box-sizing: border-box;
-    }
-
-    *,
-    *::before,
-    *::after {
-      box-sizing: inherit;
-    }
-
-    .main-container {
-      width: 320px;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      margin: 0 auto;
-    }
-
-    .minor-display,
-    .major-display {
-      border: 1px solid saddlebrown;
-      width: 300px;
-      height: 60px;
-      text-align: right;
-      font-size: 50px;
-    }
-
-    .minor-display {
-      display: flex;
-      justify-content: flex-end;
-      white-space: nowrap;
-      overflow: hidden;
-    }
-
-    .buttons {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-      align-items: center;
-    }
-
-    .btn {
-      flex-basis: 75px;
-      height: 75px;
-      font-size: 30px;
-    }
-  </style>
 </head>
 <body>
   <div class="main-container">
