Apply more styling to completely change the look

--- a/index.html
+++ b/index.html
@@ -10,13 +10,15 @@
 <body>
   <div class="main-container">
     <div class="heading">
-      <h1>Calculator</h1>
+      <h1>Calc ye later, alligator!</h1>
     </div>
-    <div class="minor-display"></div>
-    <div class="major-display">0</div>
+    <div class="display">
+      <div class="minor-display"></div>
+      <div class="major-display">0</div>
+    </div>
     <div class="buttons">
       <button class="btn ac">AC</button>
-      <button class="btn del">DEL</button>
+      <button class="btn del">CE</button>
       <button class="btn"></button>
       <button class="btn"></button>
       <button class="btn num">7</button>
