--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
   <script src="./js/script.js" defer></script>
 </head>
 <body>
+  <div class="header">
+    <h1>Cal, cue later!</h1>
+  </div>
   <div class="main-container">
-    <div class="heading">
-      <h1>Calc ye later, alligator!</h1>
-    </div>
     <div class="display">
       <div class="minor-display"></div>
       <div class="major-display">0</div>
@@ -38,6 +38,9 @@
       <button class="btn eq">=</button>
       <button class="btn oper">+</button>
     </div>
+  </div>
+  <div class="footer">
+    <h1>&#169; ohgrmait 2024.</h1>
   </div>
 </body>
 </html>
