Add audio files to represent different operations

--- a/index.html
+++ b/index.html
@@ -42,5 +42,8 @@
   <div class="footer">
     <h1>&#169; ohgrmait 2024.</h1>
   </div>
+  <audio id="error" src="./audio/error-89206.mp3"></audio>
+  <audio id="blastoff" src="./audio/medium-explosion-40472.mp3"></audio>
+  <audio id="countdown" src="./audio/short-beep-countdown-81121.mp3"></audio>
 </body>
 </html>
