Rework header and footer to fit into screen

--- a/index.html
+++ b/index.html
@@ -8,9 +8,7 @@
   <script src="./js/script.js" defer></script>
 </head>
 <body>
-  <div class="header">
-    <h1>Cal, cue later!</h1>
-  </div>
+  <div class="header">Cal, cue later!</div>
   <div class="main-container">
     <div class="display">
       <div class="minor-display"></div>
@@ -39,9 +37,7 @@
       <button class="btn oper">+</button>
     </div>
   </div>
-  <div class="footer">
-    <h1>&#169; ohgrmait 2024.</h1>
-  </div>
+  <div class="footer">(&#169; ohgrmait 2024.)</div>
   <audio id="error" src="./audio/error-89206.mp3"></audio>
   <audio id="blastoff" src="./audio/medium-explosion-40472.mp3"></audio>
   <audio id="countdown" src="./audio/short-beep-countdown-81121.mp3"></audio>
