--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       <button class="btn oper">+</button>
     </div>
   </div>
-  <div class="footer">(&#169; ohgrmait 2024.)</div>
+  <div class="footer">&#169; ohgrmait 2024.</div>
   <audio id="error" src="./audio/error-89206.mp3"></audio>
   <audio id="blastoff" src="./audio/medium-explosion-40472.mp3"></audio>
   <audio id="countdown" src="./audio/short-beep-countdown-81121.mp3"></audio>
