Move audio files and fix relative file path links

--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
     </div>
   </div>
   <div class="footer">&#169; ohgrmait 2024.</div>
-  <audio id="error" src="./audio/error-89206.mp3"></audio>
-  <audio id="blastoff" src="./audio/medium-explosion-40472.mp3"></audio>
-  <audio id="countdown" src="./audio/short-beep-countdown-81121.mp3"></audio>
+  <audio id="error" src="./assets/audio/error-89206.mp3"></audio>
+  <audio id="blastoff" src="./assets/audio/medium-explosion-40472.mp3"></audio>
+  <audio id="countdown" src="./assets/audio/short-beep-countdown-81121.mp3"></audio>
 </body>
 </html>
